--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="tab_text_2">Tokyo</string>
     <string name="tab_text_3">California</string>
     <string name="action_settings">Settings</string>
+    <string name="action_edit_current">Edit Current Location</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
     <string name="humidity"><font fgcolor='#FFFFFFFF'>{wic-raindrop}</font></string>
