--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,13 +16,13 @@
     <string name="wind_direction"><font fgcolor='#FFFFFFFF'>{wic-wind-direction}</font></string>
     <string name="wind_direction2"> N</string>
 
-    <string name="visibility"><font fgcolor='#FFFFFFFF' size='16'>{faw-eye}</font></string>
+    <string name="visibility"><font fgcolor='#FFFFFFFF' size='16'>{faw-binoculars}</font></string>
     <string name="visibility2"> 6 KM</string>
 
     <string name="pressure"><font fgcolor='#FFFFFFFF'>{wic-barometer}</font></string>
     <string name="pressure2"> 1011 hPa</string>
 
-    <string name="temperature_tv">%.1f°C</string>
+    <string name="temperature_tv">%.0f°C</string>
     <string name="low_high_temp_tv">%.1f°/%.1f°</string>
     <string name="humidity_tv">%1$d%%</string>
     <string name="wind_speed_tv">%.1f /KM</string>
@@ -33,6 +33,9 @@
     <string name="location_id_1">287286</string> <!-- Muscat 287286 -->
     <string name="location_id_2">2643743</string> <!-- London -->
     <string name="location_id_3">1850147</string> <!-- Tokyo -->
+
+    <string name="no_connectivity">No or poor connectivity\nPlease try again later</string>
+
     <string name="title_activity_map">PINPOINT LOCATION</string>
 
 </resources>
